--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,12 @@
 body {
   padding: 10px;
   margin: 0;
+  
+}
+#root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
