--- a/src/pages/game/page.css
+++ b/src/pages/game/page.css
@@ -13,8 +13,7 @@
 }
 
 .titleAreaScore {
-    font-size: 25px;
-
+    font-size: 18px;
 }
 
 .titleArea {
@@ -46,13 +45,14 @@
 }
 
 .operateArea {
+    padding: 0 5px;
     width: 100%;
     height: 7%;
     border: 2px solid black;
     border-radius: 5px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 10px;
 
 
@@ -83,7 +83,6 @@
     box-shadow: 2px 2px 4px #aaaaaa;
     border: 1px solid #000;
     cursor: pointer;
-    margin-right: 10px;
 }
 
 .operateBtnArr {
