--- a/src/Modal/modalCss.css
+++ b/src/Modal/modalCss.css
@@ -1,26 +1,82 @@
-.modal-header{
-    font-size: 15px;
-    
-}
-body{
-    position: relative;
-}
-
-.modal-box{
-width: 100%;
-height: 100%;
-position: absolute;
+.modal-box {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-
+/* 遮罩层 */
 .modal-warp {
     width: 100%;
     height: 100%;
     position: relative;
+    background-color: rgb(0, 0, 0, 0.5);
 }
 
-.modal-warp>div{
+/* 头部 */
+.modal-header {
+    display: flex;
+    height: 35px;
+    justify-content: space-between;
+    background-color: #f08300;
+    align-items: center;
+    padding: 10px 10px 10px 10px;
+}
+
+/* 标题 */
+.modal-header-title {
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+
+}
+
+/* 关闭 */
+.modal-header-close {
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.modal-warp>div {
+    top: 50%;
+    left: 50%;
     position: absolute;
-    margin: 100px auto;
     z-index: 9999;
+    transform: translate(-50%, -50%);
+    background: #eee;
+    border-radius: 10px;
+    overflow: hidden;
+    padding-bottom: 50px;
+}
+
+/* 底部 */
+.modal-footer {
+    width: 100%;
+    height: 35px;
+    background-color: #f08300;
+    display: flex;
+    align-items: center;
+    bottom: 0;
+    position: absolute;
+    flex-direction: row-reverse;
+    padding: 0 10px;
+}
+
+/* 按钮 */
+.modal-footer-button {
+    width: 100px;
+    font-weight: bold;
+}
+
+.modal-footer-button-ok {
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.modal-footer-button-cancel {
+    cursor: pointer;
+
 }
