--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @import '~antd/dist/antd.css';
+/* @import '~bpmn-js/dist/assets/diagram-js.css';
+@import '~bpmn-js/dist/assets/bpmn-font/css/bpmn.css';
+@import '~bpmn-js/dist/assets/bpmn-font/css/bpmn-codes.css';
+@import '~bpmn-js/dist/assets/bpmn-font/css/bpmn-embedded.css'; */
 
 body {
   margin: 0;
