--- a/src/pages/game/page.css
+++ b/src/pages/game/page.css
@@ -1,6 +1,7 @@
 .gamebox {
     width: 100%;
-    height: 100%;
+    max-width: 700px;
+    height: 99%;
     margin: 0 auto;
     padding: 20px;
     border: 2px solid black;
