消消乐添加背景图片

--- a/src/pages/game/page.css
+++ b/src/pages/game/page.css
@@ -27,10 +27,12 @@
 }
 
 .gameArea {
+    background-image: url("../../assets/back.png");
     position: relative;
     height: 70%;
     border: 2px solid black;
     border-radius: 9px;
+    background-size: cover;
 
 }
 
